<resources>
    <string name="app_name">android2HomeWork2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Username">Имя пользователя</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="confirmation_password">Подтверждение пароля</string>
    <string name="to_come_in">Войти</string>
    <string name="abstract_text">Описание:</string>
    <string name="hand_over">Передать</string>
    <string name="press">Нажать</string>
</resources>